# interview_robot

./: .gitignore  BUGFIX_FOLLOWUP_CONNECTION.md  CHANGELOG.md  EMBEDDING_MODELS_GUIDE.md  LOGGING_AND_DEBUGGING_IMPROVEMENTS.md  PROJECT_SUMMARY.md  RAG_GUIDE.md  README.md  README_FIXES.md  README_HYBRID.md  SYNTAX_FIXES.md  USAGE_EXAMPLES.md  compare_embedding_models.py  convert_to_logging.py  interview_client.py  interview_client_hybrid.py  interview_client_v2.py  main.py  pyproject.toml  question_manager.py  questions.yaml  questions_rag_example.yaml  run_rag_interview.py  test_config.py  test_rag_system.py
chroma_db/: chroma.sqlite3
docs/: HEALTH_ANALYSIS.md  HEALTH_ANALYSIS_QUICKSTART.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  README_V2.md
examples/: employee_onboarding.yaml  product_feedback.yaml  requirement_survey.yaml  service_evaluation.yaml
scripts/: generate_report_20251119_212017.py  generate_report_for_session.py  generate_sample_report.py  interview.sh  interview_hybrid.sh
src/: __init__.py
src/analyzers/: __init__.py  health_analyzer_client.py  health_analyzer_mcp.py
src/clients/: __init__.py  interview_client.py  interview_client_hybrid.py  interview_client_rag.py  interview_client_v2.py
src/core/: __init__.py  question_manager.py  question_rag.py  question_rag_optimized.py
src/utils/: __init__.py
tests/: test_health_analysis.py
