[project]
name = "questionagent"
version = "0.2.0"
description = "基于实时语音对话的客户问答采集系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websocket-client>=1.9.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "pyaudio>=0.2.13",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "scipy>=1.11.0",
]

